--- a/Events/Events - Exercice 1.html
+++ b/Events/Events - Exercice 1.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>Hello</title>
     <style>
-        p {
-            display: none;
-        }
-        button {
-            display: block;
-        }
-        .visible {
-            display: initial;
-        }
+      p {
+        display: none;
+      }
+      button {
+        display: block;
+      }
+      .visible {
+        display: initial;
+      }
     </style>
-</head>
-<body>
-    <button class="js-button">Clic me</button>
+  </head>
+  <body>
+    <button class="js-button">Click me</button>
     <p class="js-paragraph">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut error sint at dolor optio quaerat architecto ab porro eius? Distinctio, sunt quis cupiditate voluptatum debitis consequatur quo! Eveniet, facere, iste.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut error sint at
+      dolor optio quaerat architecto ab porro eius? Distinctio, sunt quis
+      cupiditate voluptatum debitis consequatur quo! Eveniet, facere, iste.
     </p>
     <script type="text/javascript">
-        /*
-            Au clic sur le bouton, afficher le paragraphe
-            Lorsqu'on reclique dessus, masquer le paragraphe
-        */
+      addEventListener("click", () => {
+        const paragraph = document.querySelector(".js-paragraph");
+        if (paragraph.classList.contains("visible")) {
+          paragraph.classList.remove("visible");
+        } else {
+          paragraph.classList.add("visible");
+        }
+      });
     </script>
-</body>
+  </body>
 </html>
