--- a/Events/Events - Exercice 3.html
+++ b/Events/Events - Exercice 3.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>Hello</title>
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <input type="text" name="search" class="js-search" />
     <p class="js-paragraph"></p>
     <script type="text/javascript">
-        /*
-            Lorsque l'utilisateur modifie le texte dans l'input,
-            il est affiché dans le paragraphe en temps réel,
-            comme montré sur la vidéo
-        */
+      addEventListener("input", () => {
+        const input = document.querySelector(".js-search");
+        const paragraph = document.querySelector(".js-paragraph");
+        paragraph.innerText = input.value;
+      });
     </script>
-</body>
+  </body>
 </html>
