Last daily commit

--- a/Collections/Collections - Exercice 1.html
+++ b/Collections/Collections - Exercice 1.html
@@ -27,7 +27,7 @@
       ];
 
       personnes.forEach((personne) => {
-        console.log(personne.firstName + " " + personne.lastName);
+        console.log(`${personne.firstName} ${personne.lastName}`);
       });
     </script>
   </body>
